--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Post</title>
-    <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="css/index.css" />
 </head>
+
 <body>
-    <h1>Aqui se va hacer el blog del post</h1>
-    <p>Parrfo inicial</p>
+    <div id="container">
+        <div id="post">
+            <h1>Titulo atrctivo e interesante del post</h1>
+            <p>Parrfo inicial donde se va explicar las cosas increibles que se pueden hacer con las ramas</p>
+        </div>
+    </div>
 </body>
+
 </html>
