--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div id="container">
+        <div id="cabecera">Cabecera</div>
         <div id="post">
             <h1>Titulo atrctivo e interesante del post</h1>
             <p>Parrfo inicial donde se va explicar las cosas increibles que se pueden hacer con las ramas</p>
