--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
 <body>
     <div id="container">
-        <div id="cabecera">Cabecera</div>
+        <div id="cabecera">
+            Hyperblog
+            <span id="tagline">Tu blog de cabecera</span>
+        </div>
         <div id="post">
             <h1>Titulo atrctivo e interesante del post</h1>
             <p>Parrfo inicial donde se va explicar las cosas increibles que se pueden hacer con las ramas</p>
