--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog de cabecera tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Titulo atrctivo e interesante del post</h1>
             <p>Parrfo inicial donde se va explicar las cosas increibles que se pueden hacer con las ramas</p>
             <p>
                 Los blogs son la mejor forma de compartir información y tus idas. Mucho mas que ir a conferencias o salir en Youtube
+            </p>
+            <p>
+                Subscribete y dale Like
             </p>
         </div>
     </div>
