--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Post</title>
+    <title>Post blog</title>
     <link rel="stylesheet" href="css/index.css" />
 </head>
 
@@ -19,7 +19,8 @@
             <h1>Titulo atrctivo e interesante del post</h1>
             <p>Parrfo inicial donde se va explicar las cosas increibles que se pueden hacer con las ramas</p>
             <p>
-                Los blogs son la mejor forma de compartir información y tus idas. Mucho mas que ir a conferencias o salir en Youtube
+                Los blogs son la mejor forma de compartir información y tus idas. Mucho mas que ir a conferencias o
+                salir en Youtube
             </p>
             <p>
                 Subscribete y dale Like
