--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
+            <img id="logo" src="imagenes/dragon.png" />
+            Hyperblog
             Hyperblog
             <span id="tagline">Tu blog de cabecera y de confianza</span>
         </div>
