--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 Subscribete y dale Like
             </p>
         </div>
+        <div id="footer">
+            Footer hecho
+        </div>
     </div>
 </body>
 
