--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         <div id="post">
             <h1>Titulo atrctivo e interesante del post</h1>
-            <p>Parrfo inicial donde se va explicar las cosas increibles que se pueden hacer con las ramas</p>
+            <p>Parrfo inicial donde se va explicar las cosas increíbles que se pueden hacer con las ramas</p>
             <p>
-                Los blogs son la mejor forma de compartir información y tus idas. Mucho mas que ir a conferencias o
+                Los blogs son la mejor forma de compartir información y tus idas. Mucho mais que ir a conferencias o
                 salir en Youtube
             </p>
             <p>
