--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Post blog</title>
     <link rel="stylesheet" href="css/index.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="container">
-        <div id="cabecera">
-            <img id="logo" src="imagenes/dragon.png" />
-            Hyperblog
-            Hyperblog
-            <span id="tagline">Tu blog de cabecera y de confianza</span>
-        </div>
-        <div id="post">
-            <h1>Titulo atrctivo e interesante del post</h1>
-            <p>Parrfo inicial donde se va explicar las cosas increíbles que se pueden hacer con las ramas</p>
-            <p>
-                Los blogs son la mejor forma de compartir información y tus idas. Mucho mais que ir a conferencias o
-                salir en Youtube
-            </p>
-            <p>
-                Subscribete y dale Like
-            </p>
-        </div>
-        <div id="footer">
-            Footer hecho
-        </div>
+      <div id="cabecera">
+        <img id="logo" src="imagenes/dragon.png" />
+        Hyperblog Hyperblog
+        <span id="tagline">Tu blog de cabecera y de confianza</span>
+      </div>
+      <div id="post">
+        <h1>Titulo atrctivo e interesante del post</h1>
+        <p>
+          Parrfo inicial donde se va explicar las cosas increíbles que se pueden
+          hacer con las ramas
+        </p>
+        <p>
+          Los blogs son la mejor forma de compartir información y tus idas.
+          Mucho mais que ir a conferencias o salir en Youtube
+        </p>
+        <p>
+          Subscribete y dale Like
+        </p>
+      </div>
+      <div id="footer">
+        Footer hecho
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
