--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div id="cabecera">
         <img id="logo" src="imagenes/dragon.png" />
         Hyperblog Hyperblog
-        <span id="tagline">Tu blog de cabecera y de confianza</span>
+        <span id="tagline">Tu blog de cabecera y de confianza 2</span>
       </div>
       <div id="post">
         <h1>Titulo atrctivo e interesante del post</h1>
